ssl-antlr-calculator/Calculator.g4
grammar Calculator;

program
    : functionDeclaration EOF
    ;

functionDeclaration
    : FUNCTION Identifier '(' parameterList? ')' '{' functionBody '}'
    ;

parameterList
    : Identifier (',' Identifier)*
    ;

functionBody
    : statement*
    ;

statement
    : expressionStatement
    | consoleStatement
    ;

expressionStatement
    : expression ';'
    ;

consoleStatement
    : CONSOLE '.' LOG '(' expression ')' ';'
    ;

expression
    : term (('+' | '-') term)*
    ;

term
    : Identifier
    | Number
    | '(' expression ')'
    ;

FUNCTION : 'function';
CONSOLE : 'console';
LOG : 'log';

Identifier
    : LETTER (LETTER | DIGIT | '_')*
    ;

Number
    : DIGIT+
    ;

fragment LETTER : [a-zA-Z];

fragment DIGIT : [0-9];

WS : [ \t\r\n]+ -> skip;
